contact view and edits to controller.

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,6 +1,6 @@
-Connect landing page
+<h1>Connect landing page</h1>
 
-SEE NaME or Business NaME
+<h2>SEE NaME or Business NaME</h2>
 
 picture or video  
 
@@ -8,3 +8,10 @@ picture or video
 -> to side -> social media
 
 ^ under picture /video Sign up or mailing list^
+<br>
+<br>
+<br>
+<br>
+
+<h4> Want to be added to my Mailing list?</h4>
+<p><%= link_to 'Add to mailing list', new_contact_path(@contacts)%></p>
