--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -10,3 +10,5 @@ picture or video
 -> to side -> social media
 
 ^ under picture /video Sign up or mailing list^
+
+<%= render partial: "layout/errors", locals: {object: @page} %>
